@@ -3,7 +3,7 @@
  * UTILS.C - Miscellaneous utility functions for Nagios
  *
  * Copyright (c) 1999-2006 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   12-13-2006
+ * Last Modified:   12-21-2006
  *
  * License:
  *
@@ -236,6 +236,8 @@ extern pthread_t       worker_threads[TOTAL_WORKER_THREADS];
 extern circular_buffer external_command_buffer;
 extern circular_buffer check_result_buffer;
 extern circular_buffer event_broker_buffer;
+extern unsigned long   external_command_buffer_slots;
+extern unsigned long   check_result_buffer_slots;
 
 /* from GNU defines errno as a macro, since it's a per-thread variable */
 #ifndef errno
@@ -3759,7 +3761,7 @@ int read_check_result(check_result *info){
 		check_result_buffer.buffer[check_result_buffer.tail]=NULL;
 
 		/* adjust tail counter and number of items */
-		check_result_buffer.tail=(check_result_buffer.tail + 1) % CHECK_RESULT_BUFFER_SLOTS;
+		check_result_buffer.tail=(check_result_buffer.tail + 1) % check_result_buffer_slots;
 		check_result_buffer.items--;
 
 		result=1;
@@ -5029,7 +5031,7 @@ int init_check_result_worker_thread(void){
 	check_result_buffer.tail=0;
 	check_result_buffer.items=0;
 	check_result_buffer.overflow=0L;
-	check_result_buffer.buffer=(void **)malloc(CHECK_RESULT_BUFFER_SLOTS*sizeof(check_result **));
+	check_result_buffer.buffer=(void **)malloc(check_result_buffer_slots*sizeof(check_result **));
 	if(check_result_buffer.buffer==NULL)
 		return ERROR;
 
@@ -5075,7 +5077,7 @@ void cleanup_check_result_worker_thread(void *arg){
 	register int x=0;
 
 	/* release memory allocated to circular buffer */
-	for(x=check_result_buffer.tail;x!=check_result_buffer.head;x=(x+1) % CHECK_RESULT_BUFFER_SLOTS){
+	for(x=check_result_buffer.tail;x!=check_result_buffer.head;x=(x+1) % check_result_buffer_slots){
 		my_free((void **)&((check_result **)check_result_buffer.buffer)[x]);
 		((check_result **)check_result_buffer.buffer)[x]=NULL;
 	        }
@@ -5098,7 +5100,7 @@ int init_command_file_worker_thread(void){
 	external_command_buffer.tail=0;
 	external_command_buffer.items=0;
 	external_command_buffer.overflow=0L;
-	external_command_buffer.buffer=(void **)malloc(COMMAND_BUFFER_SLOTS*sizeof(char **));
+	external_command_buffer.buffer=(void **)malloc(external_command_buffer_slots*sizeof(char **));
 	if(external_command_buffer.buffer==NULL)
 		return ERROR;
 
@@ -5144,7 +5146,7 @@ void cleanup_command_file_worker_thread(void *arg){
 	register int x=0;
 
 	/* release memory allocated to circular buffer */
-	for(x=external_command_buffer.tail;x!=external_command_buffer.head;x=(x+1) % COMMAND_BUFFER_SLOTS){
+	for(x=external_command_buffer.tail;x!=external_command_buffer.head;x=(x+1) % external_command_buffer_slots){
 		my_free((void **)&((char **)external_command_buffer.buffer)[x]);
 		((char **)external_command_buffer.buffer)[x]=NULL;
 	        }
@@ -5245,7 +5247,7 @@ void * check_result_worker_thread(void *arg){
 		pthread_mutex_unlock(&check_result_buffer.buffer_lock);
 
 		/* process data in the pipe (one message max) if there's some free space in the circular buffer */
-		if(buffer_items<CHECK_RESULT_BUFFER_SLOTS){
+		if(buffer_items<check_result_buffer_slots){
 
 			/* read all data from client */
 			while(1){
@@ -5484,21 +5486,21 @@ int buffer_check_result(check_result *info){
 
 	/* handle overflow conditions */
 	/* NOTE: This should never happen - child processes will instead block trying to write messages to the pipe... */
-	if(check_result_buffer.items==CHECK_RESULT_BUFFER_SLOTS){
+	if(check_result_buffer.items==check_result_buffer_slots){
 
 		/* record overflow */
 		check_result_buffer.overflow++;
 
 		/* update tail pointer */
-		check_result_buffer.tail=(check_result_buffer.tail + 1) % CHECK_RESULT_BUFFER_SLOTS;
+		check_result_buffer.tail=(check_result_buffer.tail + 1) % check_result_buffer_slots;
 	        }
 
 	/* save the data to the buffer */
 	((check_result **)check_result_buffer.buffer)[check_result_buffer.head]=new_info;
 
 	/* increment the head counter and items */
-	check_result_buffer.head=(check_result_buffer.head + 1) % CHECK_RESULT_BUFFER_SLOTS;
-	if(check_result_buffer.items<CHECK_RESULT_BUFFER_SLOTS)
+	check_result_buffer.head=(check_result_buffer.head + 1) % check_result_buffer_slots;
+	if(check_result_buffer.items<check_result_buffer_slots)
 		check_result_buffer.items++;
 	
 #ifdef DEBUG_CHECK_IPC
@@ -5547,11 +5549,11 @@ void * command_file_worker_thread(void *arg){
 		pthread_mutex_unlock(&external_command_buffer.buffer_lock);
 
 #ifdef DEBUG_CFWT
-		printf("(CFWT) BUFFER ITEMS: %d/%d\n",buffer_items,COMMAND_BUFFER_SLOTS);
+		printf("(CFWT) BUFFER ITEMS: %d/%d\n",buffer_items,external_command_buffer_slots);
 #endif
 
 		/* process all commands in the file (named pipe) if there's some space in the buffer */
-		if(buffer_items<COMMAND_BUFFER_SLOTS){
+		if(buffer_items<external_command_buffer_slots){
 
 			/* clear EOF condition from prior run (FreeBSD fix) */
 			clearerr(command_file_fp);
@@ -5564,7 +5566,7 @@ void * command_file_worker_thread(void *arg){
 #endif
 
 				/* submit the external command for processing (retry if buffer is full) */
-				while((result=submit_external_command(input_buffer,&buffer_items))==ERROR && buffer_items==COMMAND_BUFFER_SLOTS){
+				while((result=submit_external_command(input_buffer,&buffer_items))==ERROR && buffer_items==external_command_buffer_slots){
 
 					/* wait a bit */
 					tv.tv_sec=0;
@@ -5576,11 +5578,11 @@ void * command_file_worker_thread(void *arg){
 				        }
 
 #ifdef DEBUG_CFWT
-				printf("(CFWT) RES: %d, BUFFER_ITEMS: %d/%d\n",result,buffer_items,COMMAND_BUFFER_SLOTS);
+				printf("(CFWT) RES: %d, BUFFER_ITEMS: %d/%d\n",result,buffer_items,external_comand_buffer_slots);
 #endif
 
 				/* bail if the circular buffer is full */
-				if(buffer_items==COMMAND_BUFFER_SLOTS)
+				if(buffer_items==external_command_buffer_slots)
 					break;
 
 				/* should we shutdown? */
@@ -5610,13 +5612,13 @@ int submit_external_command(char *cmd, int *buffer_items){
 	/* obtain a lock for writing to the buffer */
 	pthread_mutex_lock(&external_command_buffer.buffer_lock);
 
-	if(external_command_buffer.items<COMMAND_BUFFER_SLOTS){
+	if(external_command_buffer.items<external_command_buffer_slots){
 
 		/* save the line in the buffer */
 		((char **)external_command_buffer.buffer)[external_command_buffer.head]=(char *)strdup(cmd);
 
 		/* increment the head counter and items */
-		external_command_buffer.head=(external_command_buffer.head + 1) % COMMAND_BUFFER_SLOTS;
+		external_command_buffer.head=(external_command_buffer.head + 1) % external_command_buffer_slots;
 		external_command_buffer.items++;
 	        }
 
@@ -5966,6 +5968,9 @@ int reset_variables(void){
 
         enable_embedded_perl=DEFAULT_ENABLE_EMBEDDED_PERL;
 	use_embedded_perl_implicitly=DEFAULT_USE_EMBEDDED_PERL_IMPLICITLY;
+
+	external_command_buffer_slots=DEFAULT_EXTERNAL_COMMAND_BUFFER_SLOTS;
+	check_result_buffer_slots=DEFAULT_CHECK_RESULT_BUFFER_SLOTS;
 
 	date_format=DATE_FORMAT_US;
 
